--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <div class="gallery" id="gallery">
             <h2 class="h2">Galerie</h2>
             <div class="gallery__content">
-                <figure class="gallery__fig"><img  class="gallery__fig__img" src="http://via.placeholder.com/640x360" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
-                <figure class="gallery__fig"><img  class="gallery__fig__img" src="http://via.placeholder.com/640x360" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
-                <figure class="gallery__fig"><img  class="gallery__fig__img" src="http://via.placeholder.com/640x360" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
-                <figure class="gallery__fig"><img  class="gallery__fig__img" src="http://via.placeholder.com/640x360" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
+                <figure class="gallery__fig"><img  class="gallery__fig__img" src="./img/render1.jpg" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
+                <figure class="gallery__fig"><img  class="gallery__fig__img" src="./img/render2.jpg" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
+                <figure class="gallery__fig"><img  class="gallery__fig__img" src="./img/etiketa.jpg" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
+                <figure class="gallery__fig"><img  class="gallery__fig__img" src="./img/ad.jpg" alt=""><figcaption  class="gallery__fig__figcap"></figcaption></figure>
             
             </div>
         </div>
